welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: '(' expected but identifier found.
   	if vuBiscuit==true{
           ^Program:13: error: illegal start of simple expression
  }
  ^